--- a/app/views/trips/new.html.erb
+++ b/app/views/trips/new.html.erb
@@ -1,5 +1,7 @@
 <%= form_tag('trips', method: 'get') do %>
-  <%= label_tag(:q, "Search for:") %>
+  <%= label_tag(:iata_code, "Search for:") %>
   <%= text_field_tag(:iata_code) %>
+  <%= label_tag(:date, "Date:") %>
+  <%= text_field_tag :departure_date, nil, placeholder: 'YYYY-mm-dd' %>
   <%= submit_tag("Search") %>
 <% end %>
