--- a/app/views/trips/new.html.erb
+++ b/app/views/trips/new.html.erb
@@ -1,10 +1,10 @@
 <%= form_tag('trips', method: 'get') do %>
-  <%= label_tag(:iata_code, "Search for:") %>
-  <%= text_field_tag(:iata_code) %><br />
-  <%= label_tag(:date, "Date:") %>
+  <%= label_tag(:iata_code, "From:") %>
+  <%= select_tag(:iata_code, options_for_select(AmadeusService.list_origins('EUR', 'GBP').values.flatten.map!{ |ap| [Airport.find_by(iata: ap).city.name, ap] }) ) %><br />
+  <%= label_tag(:departure_date, "Date:") %>
   <%= text_field_tag :departure_date, nil, value: '2016-12-27', placeholder: 'YYYY-mm-dd' %><br />
-  <%= label_tag(:duration, "Durée:") %>
-  <%= select_tag(:duration, '<option value="3">3 jours</option><option value="4">4 jours</option>'.html_safe) %>
+  <%= label_tag(:duration, "How long:") %>
+  <%= select_tag(:duration, options_for_select(Scraper::DURATIONS)) %>
   <br />
   <%= submit_tag("Let's get fresh air") %>
 <% end %>
