Add front and trip index controller

--- a/app/assets/stylesheets/config/_variables.scss
+++ b/app/assets/stylesheets/config/_variables.scss
@@ -25,6 +25,8 @@ $base-height: 1.4;
  * ------------------------------------- */
 // Scheme
 $brand-color: #D23333;
+$brand-primary: #e96443;
+$brand-secondary: #904e95;
 
 $red: #EE5F5B;
 $blue: #469AE0;
