--- a/app/assets/stylesheets/layout/_footer.scss
+++ b/app/assets/stylesheets/layout/_footer.scss
@@ -1,1 +1,8 @@
 // Your footer style
+footer {
+  padding: 30px 0 0 0;
+  color: #fff;
+  font-size: 16px;
+  opacity: 0.7;
+  text-align: center;
+}
