--- a/app/assets/stylesheets/layout/_utilities.scss
+++ b/app/assets/stylesheets/layout/_utilities.scss
@@ -23,3 +23,20 @@
 .bg-dark-blue {
   background: #3b5998;
 }
+
+h1 {
+  font-size: 100px;
+  line-height: 80px;
+  font-weight: 700;
+  text-align: center;
+  color: #fff;
+  margin: 40px 0 0 0;
+  text-shadow: 0px 0px 6px #555;
+}
+h2 {
+  opacity: 0.7;
+  font-size: 30px;
+  text-align: center;
+  color: #fff;
+  margin: 0 0 40px 0;
+}
