--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -2,3 +2,15 @@
  * CSS code specific to home page
  * (margin/padding adjustments)
  * ------------------------------------- */
+.trips-new, .trips-index {
+  background: #e96443; /* fallback for old browsers */
+  background: -webkit-linear-gradient(to top, $brand-primary , #904e95); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to top, $brand-primary , #904e95); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  // Blush - Timber - Miaka - Ibiza Sunset
+  // background: #EECDA3; /* fallback for old browsers */
+  // background: -webkit-linear-gradient(to bottom, #955294 , #f95c19); /* Chrome 10-25, Safari 5.1-6 */
+  // background: linear-gradient(to bottom, #955294 , #f95c19); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
