--- a/app/views/trips/index.html.erb
+++ b/app/views/trips/index.html.erb
@@ -1,12 +1,49 @@
-<p>Résultats depuis : <%= params[:iata_code] %><p>
-<ul>
-  <% @result['results'].each do |result| %>
-    <li>
-      <%= result['destination'] %><br />
-      <%= result['departure_date'] %><br />
-      <%= result['return_date'] %><br />
-      <%= result['airline'] %><br />
-      <%= result['price'] + '€' %>
-    </li>
-  <% end %>
-</ul>
+<div class="container">
+  <div class="row">
+    <div class="col-xs-12 col-sm-6 col-sm-offset-3">
+      <h1>FreshAir</h1>
+      <h2>Cheapest trip for next week-end</h2>
+    </div>
+    <div class="col-xs-12 col-sm-6 col-sm-offset-3">
+      <div class="trips-card">
+        <div class="trips-card-head">
+          <h3><%= Airport.find_by(iata: @flight['destination']).city.name %></h3>
+        </div>
+        <div class="trips-card-content">
+          <div class="flight-section">
+            <div class="flight-details">
+              <div>
+                <h4><%= params[:iata_code] %></h4>
+                <p><small>Current location</small></p>
+                <%= @flight['departure_date'].to_date.strftime('%A %m %b') %>
+              </div>
+              <div class="logo" style='background-image: url(<%= image_url 'freshair_icon' %>)'>
+              </div>
+              <div>
+                <h4><%= @flight['destination'] %></h4>
+                <p><small>weekend location</small></p>
+                <%= @flight['return_date'].to_date.strftime('%A %m %b') %>
+              </div>
+            </div>
+            <div class="flight-price">
+              <%= @flight['price'].to_i %>&euro;
+              <div class="btn btn-success">Book now</div>
+            </div>
+          </div>
+          <div class="housing-section">
+              <div class="housing-details">
+                <%= params[:people] %>
+              </div>
+              <div class="housing-price">
+                <%= @flight['airbnb']['1'].to_i %>&euro;
+                <div class="btn btn-success">Book now</div>
+              </div>
+          </div>
+          <div class='total-section'>
+            <%= @flight['airbnb']['1'].to_i + @flight['price'].to_i %>&euro;
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
