--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -1,6 +1,9 @@
 .trips-card{
   background: #FFF;
   border-radius: 8px;
+  form {
+    padding: 30px;
+  }
   .btn-success, .btn-success:focus, .btn-success:active {
     background-color: #904e95;
     color: #fff;
