--- a/app/views/trips/index.html.erb
+++ b/app/views/trips/index.html.erb
@@ -8,46 +8,53 @@
       <div class="trips-card">
         <div class="trips-card-head">
           <h3><%= Airport.find_by(iata: @flight['destination']).city.name %></h3>
-          <div class="total-price">
-            <%= @flight['airbnb']['1'].to_i + @flight['price'].to_i %>&euro;
-          </div>
         </div>
         <div class="trips-card-content">
           <div class="flight-section">
             <div class="flight-details">
               <div>
                 <h4><%= params[:iata_code] %></h4>
-                <p><small>Current location</small></p>
-                <%= @flight['departure_date'].to_date.strftime('%A %m %b') %>
+                <p><small>Current&nbsp;location</small></p>
+                <%= @flight['departure_date'].to_date.strftime('%a %d %b') %>
               </div>
               <div class="logo" style='background-image: url(<%= image_url 'freshair_icon' %>)'>
               </div>
               <div>
                 <h4><%= @flight['destination'] %></h4>
                 <p><small>weekend location</small></p>
-                <%= @flight['return_date'].to_date.strftime('%A %m %b') %>
+                <%= @flight['return_date'].to_date.strftime('%a %d %b') %>
               </div>
             </div>
             <div class="flight-price">
-              <%= @flight['price'].to_i %>&euro;
+              <span><%= @flight['price'].to_i %>&euro;</span>
               <div class="btn btn-success">Book now</div>
             </div>
           </div>
           <div class="housing-section">
               <div class="housing-details">
                 <div style="flex: 1">
+                  <small>Guests</small><br />
                   <%= (params[:people]) %><%= '1 people' if params[:people].nil? %>
                 </div>
-                <div class="logo" style='flex: 1; background-image: url(<%= image_url 'airbnb' %>)'></div>
+                <div class="logo" style='background-image: url(<%= image_url 'airbnb' %>)'></div>
                 <div style="flex: 1">
-                  Entire Home rental<br />
-                  <small>Prices updated</small>
+                  <small>Rental type</small><br />
+                  Entire Home
                 </div>
               </div>
               <div class="housing-price">
-                <%= @flight['airbnb']['1'].to_i %>&euro;
-                <div class="btn btn-success">Book now</div>
+                <span><%= @flight['airbnb']['1'].to_i %>&euro;</span>
+                <a class="btn btn-success"
+                   href="https://www.airbnb.fr/s/<%= "#{@airport.city.clean_to_str}" %>?checkin=<%= @flight["departure_date"].to_date.strftime('%d/%m/%Y') %>&checkout=<%= @flight["return_date"].to_date.strftime('%d/%m/%Y') %>&room_types%5B%5D=Entire%20home%2Fapt">Book now</a>
               </div>
+          </div>
+          <div class="total-section">
+            <div class="">
+              <i class="fa fa-heart-o" aria-hidden="true"></i><i class="fa fa-heart inactive" aria-hidden="true"></i>
+            </div>
+            <div class="total-price">
+              <%= @flight['airbnb']['1'].to_i + @flight['price'].to_i %>&euro;
+            </div>
           </div>
         </div>
       </div>
