--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -5,3 +5,11 @@
   border-radius: 4px;
 }
 
+.btn-success, .btn-success:focus, .btn-success:active {
+  background-color: #904e95;
+  color: #fff;
+  border: none;
+  &:hover {
+    background-color: darken($brand-secondary, 10%);
+  }
+}
