--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -9,7 +9,7 @@
   display: flex;
   flex-direction: column;
   min-height: 100vh;
-  // Blush - Timber - Miaka - Ibiza Sunset
+  // imber - Miaka - Virgin America
   // background: #EECDA3; /* fallback for old browsers */
   // background: -webkit-linear-gradient(to bottom, #955294 , #f95c19); /* Chrome 10-25, Safari 5.1-6 */
   // background: linear-gradient(to bottom, #955294 , #f95c19); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
