--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -8,6 +8,7 @@
   background: linear-gradient(to top, $brand-primary , #904e95); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
   min-height: 100vh;
   // imber - Miaka - Virgin America
   // background: #EECDA3; /* fallback for old browsers */
