--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -4,6 +4,9 @@
   margin-bottom: 20px;
   form {
     padding: 30px;
+    label {
+      display: none;
+    }
   }
   .trips-card-head {
     border-radius: 8px 8px 0 0;
