--- a/app/assets/stylesheets/config/_variables.scss
+++ b/app/assets/stylesheets/config/_variables.scss
@@ -26,7 +26,7 @@ $base-height: 1.4;
  * ------------------------------------- */
 // Scheme
 $brand-color: #D23333;
-$brand-primary: #e96443;
+$brand-primary: #d55f56;
 $brand-secondary: #904e95;
 
 $red: #EE5F5B;
