--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -4,8 +4,8 @@
  * ------------------------------------- */
 .trips-new, .trips-index {
   background: #e96443; /* fallback for old browsers */
-  background: -webkit-linear-gradient(to top, $brand-primary , #904e95); /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to top, $brand-primary , #904e95); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: -webkit-linear-gradient(to top, $brand-primary , $brand-secondary); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to top, $brand-primary , $brand-secondary); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   display: flex;
   flex-direction: column;
   justify-content: space-between;
