--- a/app/views/trips/new.html.erb
+++ b/app/views/trips/new.html.erb
@@ -1,7 +1,9 @@
 <div class="container">
   <div class="row">
     <div class="col-xs-12 col-sm-6 col-sm-offset-3">
-      <h1>FreshAir</h1>
+      <%= link_to root_path do %>
+        <h1>FreshAir</h1>
+      <% end %>
       <h2>Cheapest trip for next week-end</h2>
     </div>
     <div class="col-xs-12 col-sm-4 col-sm-offset-4">
@@ -23,7 +25,9 @@
             <div class="col-xs-12 col-sm-6">
               <div class="form-group">
                 <%= label_tag(:duration, "Days") %>
-                <%= select_tag(:duration, options_for_select(Scraper::DURATIONS.map { |d| [d.to_s + ' days', d] }), class: 'form-control', prompt: 'Days') %>
+                <%= select_tag(:duration,
+                    options_for_select(Scraper::DURATIONS.map { |d| [(d + 1).to_s + ' days', d] }),
+                    class: 'form-control', prompt: 'Days') %>
               </div>
             </div>
             <div class="col-xs-12 col-sm-6">
