--- a/app/views/trips/index.html.erb
+++ b/app/views/trips/index.html.erb
@@ -1,76 +1,82 @@
 <div class="container">
   <div class="row">
     <div class="col-xs-12 col-sm-6 col-sm-offset-3">
-      <h1>FreshAir</h1>
+      <%= link_to root_path do %>
+        <h1>FreshAir</h1>
+      <% end %>
       <h2>Cheapest trip for next week-end</h2>
     </div>
     <div class="col-xs-12 col-sm-6 col-sm-offset-3">
-      <% count = 0 %>
-      <% @flights.each do |flight| %>
-      <% count += 1 %>
-      <div class="trips-card inactive" id="flight-<%= count %>" %>
-        <div class="trips-card-head">
-          <h3><%= Airport.find_by(iata: flight['destination']).city.name %></h3>
-        </div>
-        <div class="trips-card-content">
-          <div class="flight-section">
-            <div class="flight-details">
-              <div>
-                <h4><%= params[:iata_code] %></h4>
-                <p><small>Current&nbsp;location</small></p>
-                <p><%= flight['departure_date'].to_date.strftime('%a %d %b') %></p>
+      <% if @flights %>
+        <% count = 0 %>
+        <% @flights.each do |flight| %>
+        <% count += 1 %>
+        <div class="trips-card inactive" id="flight-<%= count %>" %>
+          <div class="trips-card-head">
+            <h3><%= Airport.find_by(iata: flight['destination']).city.name %></h3>
+          </div>
+          <div class="trips-card-content">
+            <div class="flight-section">
+              <div class="flight-details">
+                <div>
+                  <h4><%= params[:iata_code] %></h4>
+                  <p><small><%= t('.iata_from') %></small></p>
+                  <p><%= flight['departure_date'].to_date.strftime('%a %d %b') %></p>
+                </div>
+                <div class="logo" style='background-image: url(<%= image_url 'freshair_icon' %>)'>
+                </div>
+                <div>
+                  <h4><%= flight['destination'] %></h4>
+                  <p><small><%= t('.iata_to') %></small></p>
+                  <p><%= flight['return_date'].to_date.strftime('%a %d %b') %></p>
+                </div>
               </div>
-              <div class="logo" style='background-image: url(<%= image_url 'freshair_icon' %>)'>
-              </div>
-              <div>
-                <h4><%= flight['destination'] %></h4>
-                <p><small>trip destination</small></p>
-                <p><%= flight['return_date'].to_date.strftime('%a %d %b') %></p>
+              <div class="flight-price">
+                <span><%= flight['price'].to_i %>&euro;</span>
+                <div class="btn btn-success">Book now</div>
               </div>
             </div>
-            <div class="flight-price">
-              <span><%= flight['price'].to_i %>&euro;</span>
-              <div class="btn btn-success">Book now</div>
+            <div class="housing-section">
+              <div class="housing-details">
+                <div style="flex: 1">
+                  <small>Guests</small><br />
+                  <%= params[:people].to_s + ' people' %>
+                </div>
+                <div class="logo" style='background-image: url(<%= image_url 'airbnb' %>)'></div>
+                <div style="flex: 1">
+                  <small>Rental type</small><br />
+                  Entire Home
+                </div>
+              </div>
+              <div class="housing-price">
+                <span><%= flight['airbnb'][params[:people]].to_i * params[:duration].to_i %>&euro;</span>
+                <a class="btn btn-success"
+                   href="https://www.airbnb.fr/s/<%= "#{Airport.find_by(iata: flight['destination']).city.clean_to_str}" %>?checkin=<%= flight["departure_date"].to_date.strftime('%d/%m/%Y') %>&checkout=<%= flight["return_date"].to_date.strftime('%d/%m/%Y') %>&room_types%5B%5D=Entire%20home%2Fapt">Book now</a>
+              </div>
             </div>
           </div>
-          <div class="housing-section">
-            <div class="housing-details">
-              <div style="flex: 1">
-                <small>Guests</small><br />
-                <%= params[:people].to_s + ' people' %>
+          <div class="trips-card-footer">
+            <div class="total-section">
+              <div class="save-trip">
+                <i class="fa fa-heart-o" aria-hidden="true"></i><i class="fa fa-heart inactive" aria-hidden="true"></i>
               </div>
-              <div class="logo" style='background-image: url(<%= image_url 'airbnb' %>)'></div>
-              <div style="flex: 1">
-                <small>Rental type</small><br />
-                Entire Home
+              <div class="total-price">
+                <%= (flight['airbnb'][params[:people]].to_i * params[:duration].to_i) + flight['price'].to_i %>&euro;
               </div>
-            </div>
-            <div class="housing-price">
-              <span><%= flight['airbnb'][params[:people]].to_i %>&euro;</span>
-              <a class="btn btn-success"
-                 href="https://www.airbnb.fr/s/<%= "#{Airport.find_by(iata: flight['destination']).city.clean_to_str}" %>?checkin=<%= flight["departure_date"].to_date.strftime('%d/%m/%Y') %>&checkout=<%= flight["return_date"].to_date.strftime('%d/%m/%Y') %>&room_types%5B%5D=Entire%20home%2Fapt">Book now</a>
             </div>
           </div>
         </div>
-        <div class="trips-card-footer">
-          <div class="total-section">
-            <div class="save-trip">
-              <i class="fa fa-heart-o" aria-hidden="true"></i><i class="fa fa-heart inactive" aria-hidden="true"></i>
-            </div>
-            <div class="total-price">
-              <%= flight['airbnb'][params[:people]].to_i + flight['price'].to_i %>&euro;
-            </div>
-          </div>
-        </div>
-      </div>
-      <% end %>
-      <p class="more-result">
-        <%= link_to '#flight-2', id: 'more-flights' do %>
-           <i class="fa fa-angle-down" aria-hidden="true"></i>&nbsp;
-           Get more results&nbsp;
-           <i class="fa fa-angle-down" aria-hidden="true"></i>
         <% end %>
-      </p>
+        <p class="more-result">
+          <%= link_to '#flight-2', id: 'more-flights' do %>
+             <i class="fa fa-angle-down" aria-hidden="true"></i>&nbsp;
+             Get more results&nbsp;
+             <i class="fa fa-angle-down" aria-hidden="true"></i>
+          <% end %>
+        </p>
+      <% else %>
+        <p>No result from this location or for this date</p>
+      <% end %>
     </div>
   </div>
 </div>
