--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -4,6 +4,9 @@
   margin-bottom: 30px;
   form {
     padding: 30px;
+    select {
+      background-color: #fff;
+    }
     label {
       display: none;
     }
