--- a/app/assets/stylesheets/layout/_utilities.scss
+++ b/app/assets/stylesheets/layout/_utilities.scss
@@ -50,7 +50,7 @@ a:hover, a:focus, a:active {
 // Headers
 h1 {
   font-family: $logo-font;
-  font-size: 100px;
+  font-size: 80px;
   line-height: 80px;
   font-weight: 700;
   text-align: center;
@@ -65,4 +65,17 @@ h2 {
   text-align: center;
   color: #fff;
   margin: 0 0 35px 0;
+}
+
+@media only screen and (max-width: 767px) {
+  h1 {
+    font-size: 70px;
+    margin: 20px 0 0 0;
+    line-height: 100%;
+  }
+  h2 {
+    font-size: 26px;
+    line-height: 100%;
+    margin: 0 0 25px 0;
+  }
 }
