--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -1,7 +1,7 @@
 .trips-card{
   background: #FFF;
   border-radius: 8px;
-  margin-bottom: 30px;
+  margin-bottom: 20px;
   form {
     padding: 30px;
     select {
@@ -22,8 +22,7 @@
   .trips-card-content {
     padding: 0;
     h4 {
-      font-size: 60px;
-      line-height: 50px;
+      font-size: 40px;
       margin: 0;
     }
     small{
@@ -37,7 +36,7 @@
   }
   .flight-section, .housing-section, .total-section {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: space-between;
     padding: 15px 30px;
     border-top: 1px solid #ededed;
@@ -97,4 +96,109 @@
       color: #555;
     }
   }
+}
+
+@media only screen and (min-width: 768px) {
+
+  .trips-card{
+    background: #FFF;
+    border-radius: 8px;
+    margin-bottom: 30px;
+    form {
+      padding: 30px;
+      select {
+        background-color: #fff;
+      }
+      label {
+        display: none;
+      }
+    }
+    .trips-card-head {
+      border-radius: 8px 8px 0 0;
+      padding: 15px 30px;
+      h3 {
+        text-align: center;
+        margin: 0;
+      }
+    }
+    .trips-card-content {
+      padding: 0;
+      h4 {
+        font-size: 60px;
+        line-height: 50px;
+        margin: 0;
+      }
+      small{
+        text-transform: uppercase;
+        font-size: 12px;
+        color: #aaa;
+      }
+    }
+    .trips-card-footer {
+      border-radius: 0 0 8px 8px;
+    }
+    .flight-section, .housing-section, .total-section {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      padding: 15px 30px;
+      border-top: 1px solid #ededed;
+    }
+    .flight-details, .housing-details {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      width: 100%;
+      p {
+        margin: 0;
+      }
+    }
+    .flight-price, .housing-price {
+      font-size: 30px;
+      line-height: 45px;
+      width: 27%;
+      margin: 0 0 0 8%;
+      text-align: center;
+      margin: 0 0 0 6%;
+      color: #aaa;
+      .btn-success {
+        text-transform: uppercase;
+        line-height: 30px;
+        font-size: 11px;
+      }
+    }
+    .housing-section {
+      .logo {
+        margin: 0 32px;
+      }
+    }
+    .total-section {
+      align-items: flex-end;
+      padding-top: 15px;
+      padding-bottom: 30px;
+      .save-trip {
+        form {
+          padding: 0;
+        }
+      }
+    }
+    .total-price {
+      font-size: 40px;
+      line-height: 30px;
+    }
+    .logo {
+      width: 50px;
+      height: 50px;
+      background-size: cover;
+    }
+    .fa {
+      // color: $brand-primary;
+      cursor: pointer;
+      font-size: 20px;
+      &:hover {
+        color: #555;
+      }
+    }
+  }
+
 }
