--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -13,7 +13,7 @@
   }
   .trips-card-head {
     border-radius: 8px 8px 0 0;
-    padding: 15px 30px;
+    padding: 15px;
     h3 {
       text-align: center;
       margin: 0;
@@ -22,7 +22,7 @@
   .trips-card-content {
     padding: 0;
     h4 {
-      font-size: 40px;
+      font-size: 28px;
       margin: 0;
     }
     small{
@@ -36,28 +36,31 @@
   }
   .flight-section, .housing-section, .total-section {
     display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    padding: 15px 30px;
+    flex-direction: row;
+    justify-content: flex-start;
+    padding: 15px;
     border-top: 1px solid #ededed;
   }
   .flight-details, .housing-details {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: flex-start;
     width: 100%;
     p {
       margin: 0;
+      line-height: 13px;
+      font-size: 13px;
     }
   }
   .flight-price, .housing-price {
-    font-size: 30px;
-    line-height: 45px;
+    display: flex;
+    flex-direction: column;
+    font-size: 20px;
+    line-height: 20px;
     width: 27%;
-    margin: 0 0 0 8%;
     text-align: center;
-    margin: 0 0 0 6%;
     color: #aaa;
+    margin: 0 0 0 5%;
     .btn-success {
       text-transform: uppercase;
       line-height: 30px;
@@ -65,14 +68,12 @@
     }
   }
   .housing-section {
-    .logo {
-      margin: 0 32px;
-    }
   }
   .total-section {
-    align-items: flex-end;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
     padding-top: 15px;
-    padding-bottom: 30px;
     .save-trip {
       form {
         padding: 0;
@@ -80,12 +81,12 @@
     }
   }
   .total-price {
-    font-size: 40px;
+    font-size: 30px;
     line-height: 30px;
   }
   .logo {
-    width: 50px;
-    height: 50px;
+    width: 30px;
+    height: 30px;
     background-size: cover;
   }
   .fa {
@@ -114,19 +115,12 @@
       }
     }
     .trips-card-head {
-      border-radius: 8px 8px 0 0;
       padding: 15px 30px;
-      h3 {
-        text-align: center;
-        margin: 0;
-      }
     }
     .trips-card-content {
-      padding: 0;
       h4 {
         font-size: 60px;
         line-height: 50px;
-        margin: 0;
       }
       small{
         text-transform: uppercase;
@@ -138,11 +132,8 @@
       border-radius: 0 0 8px 8px;
     }
     .flight-section, .housing-section, .total-section {
-      display: flex;
-      flex-direction: row;
       justify-content: space-between;
       padding: 15px 30px;
-      border-top: 1px solid #ededed;
     }
     .flight-details, .housing-details {
       display: flex;
@@ -154,13 +145,9 @@
       }
     }
     .flight-price, .housing-price {
+      margin: 0 0 0 8%;
       font-size: 30px;
       line-height: 45px;
-      width: 27%;
-      margin: 0 0 0 8%;
-      text-align: center;
-      margin: 0 0 0 6%;
-      color: #aaa;
       .btn-success {
         text-transform: uppercase;
         line-height: 30px;
@@ -173,7 +160,6 @@
       }
     }
     .total-section {
-      align-items: flex-end;
       padding-top: 15px;
       padding-bottom: 30px;
       .save-trip {
@@ -184,12 +170,10 @@
     }
     .total-price {
       font-size: 40px;
-      line-height: 30px;
     }
     .logo {
       width: 50px;
       height: 50px;
-      background-size: cover;
     }
     .fa {
       // color: $brand-primary;
