--- a/app/assets/stylesheets/config/_variables.scss
+++ b/app/assets/stylesheets/config/_variables.scss
@@ -27,7 +27,8 @@ $base-height: 1.4;
 // Scheme
 $brand-color: #D23333;
 $brand-primary: #d55f56;
-$brand-secondary: #904e95;
+$brand-secondary: #c062c3;
+/* #f54b19, #7166b9 */
 
 $red: #EE5F5B;
 $blue: #469AE0;
