--- a/app/views/trips/index.html.erb
+++ b/app/views/trips/index.html.erb
@@ -20,48 +20,48 @@
               <div class="flight-details">
                 <div>
                   <h4><%= params[:iata_code] %></h4>
-                  <p><small><%= t('.iata_from') %></small></p>
+                  <p><small><%= t('.departure_date', default: 'leaving on') %></small></p>
                   <p><%= flight['departure_date'].to_date.strftime('%a %d %b') %></p>
                 </div>
                 <div class="logo" style='background-image: url(<%= asset_path 'freshair_icon' %>)'>
                 </div>
                 <div>
                   <h4><%= flight['destination'] %></h4>
-                  <p><small><%= t('.iata_to') %></small></p>
+                  <p><small><%= t('.return_date', default: 'returning on') %></small></p>
                   <p><%= flight['return_date'].to_date.strftime('%a %d %b') %></p>
                 </div>
               </div>
               <div class="flight-price">
                 <span><%= flight['price'].to_i %>&euro;</span>
-                <div class="btn btn-success">Book now</div>
+                <div class="btn btn-success">Book <span>now</span></div>
               </div>
             </div>
             <div class="housing-section">
               <div class="housing-details">
-                <p>
+                <div>
                   <small>Guests</small><br />
                   <%= params[:people].to_s + ' people' %>
-                </p>
+                </div>
                 <div class="logo" style='background-image: url(<%= asset_path 'airbnb' %>)'></div>
-                <p>
-                  <small>Rental type</small><br />
-                  Entire Home
-                </p>
+                <div>
+                  <small>Type</small><br />
+                  <%= t('.entire_home') %>
+                </div>
               </div>
               <div class="housing-price">
                 <span><%= flight['airbnb'][params[:people]].to_i * params[:duration].to_i %>&euro;</span>
                 <a class="btn btn-success"
-                   href="https://www.airbnb.fr/s/<%= "#{Airport.find_by(iata: flight['destination']).city.clean_to_str}" %>?checkin=<%= flight["departure_date"].to_date.strftime('%d/%m/%Y') %>&checkout=<%= flight["return_date"].to_date.strftime('%d/%m/%Y') %>&room_types%5B%5D=Entire%20home%2Fapt">Book now</a>
+                   href="https://www.airbnb.fr/s/<%= "#{Airport.find_by(iata: flight['destination']).city.clean_to_str}" %>?checkin=<%= flight["departure_date"].to_date.strftime('%d/%m/%Y') %>&checkout=<%= flight["return_date"].to_date.strftime('%d/%m/%Y') %>&room_types%5B%5D=Entire%20home%2Fapt">Book <span>now</span></a>
               </div>
             </div>
           </div>
           <div class="trips-card-footer">
             <div class="total-section">
               <div class="share-trip">
-                <i class="fa fa-share" aria-hidden="true"></i>
+                <i class="fa fa-heart-o" aria-hidden="true"></i>
               </div>
               <div class="total-price">
-                <%= (flight['airbnb'][params[:people]].to_i * params[:duration].to_i) + flight['price'].to_i %>&euro;
+                <%= (flight['airbnb'][params[:people]].to_i * params[:duration].to_i) + flight['price'].to_i %>&euro;<small>/pers</small>
               </div>
             </div>
           </div>
@@ -75,7 +75,7 @@
           <% end %>
         </p>
       <% else %>
-        <p>No result from this location or for this date</p>
+        <p><%= t('.no_result') %></p>
       <% end %>
     </div>
   </div>
