Add JS control on form submit

--- a/app/views/trips/index.html.erb
+++ b/app/views/trips/index.html.erb
@@ -33,7 +33,7 @@
               </div>
               <div class="flight-price">
                 <span><%= flight['price'].to_i %>&euro;</span>
-                <div class="btn btn-success">Book <span>now</span></div>
+                <div class="btn btn-success" target="_blank">Book <span>now</span></div>
               </div>
             </div>
             <div class="housing-section">
@@ -51,7 +51,7 @@
               <div class="housing-price">
                 <span><%= flight['airbnb'][params[:people]].to_i * params[:duration].to_i %>&euro;</span>
                 <a class="btn btn-success"
-                   href="https://www.airbnb.fr/s/<%= "#{Airport.find_by(iata: flight['destination']).city.clean_to_str}" %>?checkin=<%= flight["departure_date"].to_date.strftime('%d/%m/%Y') %>&checkout=<%= flight["return_date"].to_date.strftime('%d/%m/%Y') %>&room_types%5B%5D=Entire%20home%2Fapt">Book <span>now</span></a>
+                   href="https://www.airbnb.fr/s/<%= "#{Airport.find_by(iata: flight['destination']).city.clean_to_str}" %>?checkin=<%= flight["departure_date"].to_date.strftime('%d/%m/%Y') %>&checkout=<%= flight["return_date"].to_date.strftime('%d/%m/%Y') %>&room_types%5B%5D=Entire%20home%2Fapt" target="_blank">Book <span>now</span></a>
               </div>
             </div>
           </div>
