--- a/app/assets/stylesheets/components/_forms.scss
+++ b/app/assets/stylesheets/components/_forms.scss
@@ -3,4 +3,11 @@
   line-height: 50px;
   border-radius: 4px;
   color: #777;
+  option {
+    color: #777;
+  }
+}
+
+form .has-error select{
+  color: red;
 }
