--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -59,7 +59,8 @@
       line-height: 12px;
       font-size: 12px;
       &:first-child, &:last-child {
-        flex: 1;
+        // flex: 1;
+        width: 38%;
       }
       &:first-child {
         text-align: right;
@@ -94,6 +95,16 @@
         padding: 0;
       }
     }
+    h4 {
+      font-size: 22px;
+      line-height: 17px;
+      font-weight: normal;
+      margin: 0;
+      small {
+        color: #ccc;
+        font-size: 16px;
+      }
+    }
   }
   .total-price {
     font-size: 22px;
@@ -110,7 +121,8 @@
     }
   }
   .logo {
-    margin: 0 8px;
+    align-self: flex-start;
+    margin: 0 10px;
     width: 25px;
     height: 25px;
     background-size: cover;
@@ -188,7 +200,8 @@
     }
     .housing-section {
       .logo {
-        margin: 0 32px;
+        align-self: center;
+        // margin: 0 32px;
       }
     }
     .total-section {
