--- a/app/views/trips/index.html.erb
+++ b/app/views/trips/index.html.erb
@@ -13,7 +13,8 @@
         <% count += 1 %>
         <div class="trips-card inactive" id="flight-<%= count %>" %>
           <div class="trips-card-head">
-            <h3><%= Airport.find_by(iata: flight['destination']).city.name %></h3>
+            <h3><%= Airport.find_by(iata: flight['destination']).city.name %>
+              <small><%= @weather[flight['destination']] %>°C</small></h3>
           </div>
           <div class="trips-card-content">
             <div class="flight-section">
